--- a/KUMECon2Data作成.ipynb
+++ b/KUMECon2Data作成.ipynb
@@ -4,13 +4,14 @@ import pandas as pd
 from scipy.stats import truncnorm
 import random
 
+skip = False
 nega = 0
 light = 0
 med = 0
 heavy =0
 hhh =0
 
-ChildorAdult =  rd.choice(2, 15, p=[0.334,0.666]) #0子供、1大人
+ChildorAdult =  rd.choice(2, 15000, p=[0.334,0.666]) #0子供、1大人
 Childp = [0.334, 0.666]  #疾患、非疾患
 Adultp = [0.1, 0.9]
 p = [Childp, Adultp]
@@ -71,10 +72,16 @@ def num_maker2(f, mu, sigma,roundn=2):
       if TTF is None:
         print(n)
       else:
+        if i>100:
+          print(i)
         return TTF
-
+    else:
+      if i>100:
+        return round(mu+rd.choice(2, 1)[0],roundn)
+kk =0
 TF = False
 for CorA in ChildorAdult:
+  kk = kk+1
   Age = round(truncnorm.rvs((low[CorA] - mus[CorA]) / sigmas[CorA],  (high[CorA] - mus[CorA]) / sigmas[CorA], loc=mus[CorA], scale=sigmas[CorA]))
   Sex = rd.choice(2) #0male ,1female
   tb = rd.choice(3, 6, p=[0.4,0.3,0.3])
@@ -173,7 +180,7 @@ for CorA in ChildorAdult:
       if l[8] == "なし":
         lislis3 = lislis3 + ["",PElis[1][0],round(PElis[2][0],2),""]
       elif l[8] == "漏出性":
-        lislis3 = lislis3 + [PElis[i][0] for i in range(4)]
+        lislis3 = lislis3 + [round(PElis[i][0],2) for i in range(4)]
       else:
         PE = rd.choice(2, 3)
         PE = PE.tolist()
@@ -210,6 +217,7 @@ for CorA in ChildorAdult:
       lislis3 = lislis3 + [round(150-CO2/0.8-l[9],2), CO2]
     lislis3.append(l[10])
     lislis3 = lislis3[0:7] +["","",""] +lislis3[7:]
+    #print(kk)
   lislis3.append(sum(lislis2[3]))
   lislis3.append(np.random.normal(sum(lislis2[3]), num_maker2(lambda a: a>0, 0.25, 0.7)))
 
@@ -228,11 +236,19 @@ for CorA in ChildorAdult:
   else:
     lislis3.append("超重症")
     hhh = hhh +1
-
+  #print("aa"+str(kk))
     #Age, Sex, Tall, 血清Cr, Weight, U_Cr, S_Na, U_Na,てんかん、呼吸数、血圧, Score, real_Score, リスク
     #Age, Sex, Tall, SCr, Weight, UCr,SNa,UNa,胸水LDH、血清LDH、血清蛋白、胸水蛋白、血清Alb,腹水Alb、PaO2,PaCo2,JCS,Score, Real_score, リスク
   #print(lislis3)
-  lislis3 = lislis3 + [round(np.random.normal(10 * lislis3[-2] + 20, num_maker2(lambda a: a>0, 0.25, 1)),2),round(np.random.normal(11 * lislis3[-2] + 0.2, num_maker2(lambda a: a>0, 0.25, num_maker2(lambda a: a>0, 0.25, 1))),2),round(np.random.normal(22 * lislis3[-2] + 145, num_maker2(lambda a: a>0, num_maker2(lambda a: a>0, 1, 1), 1)),2),round(np.random.normal(0.5 * lislis3[-2] + 20, num_maker2(lambda a: a>0, 0.1, 0.3)),3),round(np.random.normal(22 * lislis3[-2] + 13, num_maker2(lambda a: a>0, 2, 2)),2)]
+  lislis3 = lislis3 +\
+  [round(np.random.normal(num_maker2(lambda a: a>1, 10 * lislis3[-2] + 20, 5),num_maker2(lambda a: a>0.2, 0.3, 1)),2),\
+   round(np.random.normal(num_maker2(lambda a: a>1, 11 * lislis3[-2] + 0.2, 2), num_maker2(lambda a: a>0.4, 0.5, num_maker2(lambda a: a>0, 0.25, 1))),2),\
+   round(np.random.normal(num_maker2(lambda a: a>10, 22 * lislis3[-2] + 145, 20), num_maker2(lambda a: a>0, num_maker2(lambda a: a>0, 10, 10), 6)),2),\
+   round(np.random.normal(0.5 * lislis3[-2] + 20, num_maker2(lambda a: a>0, 0.2, 0.3)),3),\
+   num_maker2(lambda a: a>0, 22 * lislis3[-2] + 13, num_maker2(lambda a: a>0, 22, 12))]
+  #print("bb"+str(kk))
+  
+  
   if not TF:
     arra = np.array([lislis3])
     TF = True
@@ -241,5 +257,62 @@ for CorA in ChildorAdult:
 print(nega,light,med,heavy,hhh)
 
 df = pd.DataFrame(arra,
-                  columns=['年齢', '性別', '身長', '血清Cr', '体重', '尿中Cr', '血清Na', '尿中Na','てんかん','呼吸数','血圧','胸水LDH','血清LDH','血清蛋白','胸水蛋白','血清Alb', '腹水Alb','PaO2','PaCo2','JCS', 'Score', 'real_Score', 'リスク', 'Doukaku Ag', '陽光過敏症', 'Snapdragon Antibody', 'Witch scent負荷試験','Possession sign'])
-print(df)
+                  columns=['年齢', '性別', '身長', '血清Cr', '体重', '尿中Cr', '血清Na', '尿中Na','てんかん','呼吸数','血圧',
+                           '胸水LDH','血清LDH','血清蛋白','胸水蛋白','血清Alb', '腹水Alb','PaO2','PaCo2','JCS', 'Score', 'real_Score',
+                           'リスク', 'Doukaku Ag', '陽光過敏症', 'Snapdragon Antibody', 'Witch scent負荷試験','Possession sign'])
+#print(df)
+#print (df.columns)
+#df2 = df[['年齢', '性別', '身長', '血清Cr', '体重', '尿中Cr', '血清Na', '尿中Na','てんかん','呼吸数','血圧','胸水LDH','血清LDH','血清蛋白','胸水蛋白']]
+df2 = df[['年齢', '性別', '身長', '血清Cr', '体重', '尿中Cr', '血清Na', '尿中Na','てんかん','呼吸数','血圧','胸水LDH','血清LDH','血清蛋白','胸水蛋白','血清Alb','腹水Alb','PaO2','PaCo2','JCS', 'Doukaku Ag', '陽光過敏症', 'Snapdragon Antibody', 'Witch scent負荷試験','Possession sign']]
+
+
+df3 = df2.reindex(columns=['年齢', '性別', '身長', '体重','呼吸数','血圧', '血清Cr','血清Na','血清LDH','血清蛋白','血清Alb','PaO2','PaCo2','JCS',  '尿中Cr', '尿中Na','胸水LDH','胸水蛋白','腹水Alb','てんかん',  'Doukaku Ag', '陽光過敏症', 'Snapdragon Antibody', 'Witch scent負荷試験','Possession sign'])
+
+df3.to_csv('D-aureus新検査薬治験.csv',encoding = "shift-jis")
+"""if not skip:
+  !pip install japanize-matplotlib
+import seaborn
+import matplotlib.pyplot as plt
+import japanize_matplotlib
+
+%matplotlib inline
+for jj in ['Doukaku Ag', '陽光過敏症', 'Snapdragon Antibody', 'Witch scent負荷試験','Possession sign']:
+  #print(df[jj].astype(np.float32))
+  seaborn.violinplot(  x=df['リスク'], y=df[jj].astype(np.float32), inner="quartile", color="0.85"  )
+  seaborn.swarmplot( x=df['リスク'], y=df[jj].astype(np.float32))
+  plt.show()"""
+
+
+import statistics
+infection = [0] * 31
+for date in range(31):
+  infection[date] = random.gammavariate(3.5, 1.3)
+
+infsum = sum(infection)
+infp = [i/infsum for i in infection]
+infdate = rd.choice(31, 1000, p=infp)
+TF = False
+for date in infdate:
+  lislis4 = ["1月" + str(date)+"日", int(num_maker2(lambda a: a>0, rd.choice(2, 1)[0]*30+30, 20, roundn=0)), rd.choice(2, 1)[0], ["D.aureus", "D.aeruginosa", "D. douma", "D.goblin", "D.jougo", "D.malum"][rd.choice(6, 1)[0]]]
+  if not TF:
+    arra = np.array([lislis4])
+    TF = True
+  else:
+    arra = np.append(arra, [lislis4], axis=0)
+
+df4 = pd.DataFrame(arra, columns=['日付', '年齢', '性別','subtype'])
+df4.to_csv('１ヶ月の感染状況.csv',encoding = "shift-jis")
+number = [1000,200,10,20,20,9]
+TF = False
+for year in range(1950, 2023):
+  cut = [max(number)*1.5, sum(number)/len(number),max(number)/100, min(number)/2, statistics.median(number),min(number)/10]
+  number = [int(num_maker2(lambda a: a>cut[i] and a<200000, number[i] ,abs(cut[i]-number[i]+1), roundn=0)) for i in range(6)]
+  lislis5 = [int(year)] + number
+  if not TF:
+    arra = np.array([lislis5])
+    TF = True
+  else:
+    arra = np.append(arra, [lislis5], axis=0)
+
+df5 = pd.DataFrame(arra, columns=['年', "D.aureus", "D.aeruginosa", "D. douma", "D.goblin", "D.jougo", "D.malum"])
+df5.to_csv('subtypeの感染状況.csv',encoding = "shift-jis")
